* http://redmine.named-data.net/issues/2532#change-8836 In Face.registerPrefix,
  if connected to a remote NFD then use localhop to do remote registration. (For
  remote registration, the remote NFD must be configured for localhop_security.)
  Added the optional method Face.isLocal() for the application to check if the
  connection is local.
* Moved tests which need NFD from tests/unit_tests to tests/integration_tests.
* examples: Added test_list_channels, test_list_faces, test_list_rib and
  test_register_route to query NFD.
* examples: In repo_ng added basic_insertion.py and watched_insertion.py to
  show interaction with the repo-ng repository.

Bug fixes
* http://redmine.named-data.net/issues/2478 Fix ProtobufTlv for Python 3.
* http://redmine.named-data.net/issues/2544 Fix test_chrono_chat bug affecting OS X 10.10.

PyNDN v2.0beta3 (2015-02-03)
----------------------------

Changes
* http://redmine.named-data.net/issues/2388 Moved example programs from "tests" to "examples".
* In KeyChain.createIdentity, added an optional KeyParams argument.
* Unit tests: Added test-der-encode-decode tests for CertificateExtension.

Bug fixes
* http://redmine.named-data.net/issues/2472 Fixes to support Python 3

PyNDN v2.0beta2 (2014-12-23)
----------------------------

Changes
* Support getter and setter properties in the classes Interest, Data, MetaInfo,
  KeyLocator and ForwardingFlags, plus the internal ForwardingEntry and
  ControlParameters.
* In Name, support slice notation to call getSubName, e.g. name[2:4].
* Added ChronoSync2013 and test_chrono_chat.py.
* In Name, added wireEncode and wireDecode.
* In MetaInfo, added get/setFinalBlockId (replaces the deprecated get/setFinalBlockID).
* In MemoryContentCache, added unregisterAll.
* Added ConfigPolicyManager for heirarchical verification using an NDN config file. (Thanks to Adeola Bannis.)
* Added DigestSha256Signature. Support encoding/decoding it in interests and data packets.
* In KeyChain, added signWithSha256.