@@ -11,6 +11,9 @@ Changes
   remote registration, the remote NFD must be configured for localhop_security.)
   Added the optional method Face.isLocal() for the application to check if the
   connection is local.
+* In MemoryContentCache, added support for storePendingInterest. add(data) will
+  check if the added Data packet satisfies any pending interest. You can use
+  getStorePendingInterest() for onDataNotFound in registerPrefix().
 * Moved tests which need NFD from tests/unit_tests to tests/integration_tests.
 * examples: Added test_list_channels, test_list_faces, test_list_rib and
   test_register_route to query NFD.
